--- a/Css/metro-bootstrap.css
+++ b/Css/metro-bootstrap.css
@@ -1894,10 +1894,10 @@ table th[class*="span"],
   *margin-right: .3em;
   line-height: 14px;
   vertical-align: text-top;
-  background-image: url("../../../img/glyphicons-halflings.png");
+  background-image: url("images/glyphicons-halflings.png");
   background-position: 14px 14px;
   background-repeat: no-repeat;
-  margin-top: 1px;
+  margin-top: 3px;
 }
 /* White icons with optional class, or on hover/active states of certain elements */
 .icon-white,
@@ -1913,7 +1913,7 @@ table th[class*="span"],
 .dropdown-menu > .active > a > [class*=" icon-"],
 .dropdown-submenu:hover > a > [class^="icon-"],
 .dropdown-submenu:hover > a > [class*=" icon-"] {
-  background-image: url("../../../img/glyphicons-halflings-white.png");
+  background-image: url("images/glyphicons-halflings-white.png");
 }
 .icon-glass {
   background-position: 0      0;
@@ -2704,7 +2704,7 @@ button.close {
 }
 .btn-large [class^="icon-"],
 .btn-large [class*=" icon-"] {
-  margin-top: 4px;
+  margin-top: 7px;
 }
 .btn-small {
   padding: 2px 10px;
