--- a/Templates/template.home.html
+++ b/Templates/template.home.html
@@ -1,5 +1,4 @@
 <style>
-
 	.handwritten {
 		font-family: 'Advent Pro', sans-serif;
 	}
@@ -38,7 +37,7 @@
 <div class="grid_3" ng-repeat="image in homeImagesBegin" >
 	<div class="home">
 		<div class="homeimage">
-			<a href="#!/p/gallery_1/0"> <img src="{{image.Thumbnails[1].PhotoUri}}"/></a>
+			<a href="#!/p/gallery_1/0"> <img ngc-lazy-image="image.Thumbnails[1].PhotoUri"/></a>
 		</div>
 	</div>
 </div>
@@ -51,15 +50,13 @@
 <div class="grid_3" ng-repeat="image in homeImagesEnd">
 	<div class="home">
 		<div class="homeimage">
-			<img src="{{image.Thumbnails[1].PhotoUri}}" />
+			<img ngc-lazy-image="image.Thumbnails[1].PhotoUri" />
 		</div>
 	</div>
 </div>
 
 
 <div class="xxx">
-
-
 	<div ng-repeat="grid in pages">
 		<h3><a href="#!/page/{{grid.Link}}">{{grid.Name}}</a></h3>
 	</div>
