--- a/Templates/template.p.html
+++ b/Templates/template.p.html
@@ -25,8 +25,8 @@
 
 <div gridelement="currentGridElement"></div>
 
-<div ng-include="'template.galleryImageViewer.html'"></div>
-<div ng-include="'template.gridelements.html'"></div>
+<div ng-include="'Templates/template.galleryImageViewer.html'"></div>
+<div ng-include="'Templates/template.gridelements.html'"></div>
 
 
 
