--- a/Templates/template.ngcResponsiveImage.html
+++ b/Templates/template.ngcResponsiveImage.html
@@ -17,7 +17,7 @@
 				width: 300px;
 			}
 		</style>
-		<div>
+		<div ng-show="!loading">
 			<div class="actions">
 				<button ng-show="isOverFlowable()" ng-click="showFullSize()" class="btn-link"><span class="icon-white"
 																									ng-class="isFullSizeCssClass()"
@@ -28,7 +28,9 @@
 				</button>
 			</div>
 		</div>
-		<img ngc-lazy-image="source" width="100%" height="100%"/>
+		<div ng-show="!loading">
+			<img  ngc-lazy-image="source" width="100%" height="100%"/>
+		</div>
 
 	</div>
 
