--- a/Templates/template.home.html
+++ b/Templates/template.home.html
@@ -20,6 +20,7 @@
 		height: 710px;;
 		width: 470px;;
 		border: 1px solid gray;
+		overflow: hidden;
 	}
 
 	.right {
@@ -50,7 +51,7 @@
 <div class="grid_6">
 	<div class="home_main">
 		<div class="home_main_image">
-			<a href="#!/p/gallery_1/0"> <img ngc-lazy-image="homeImages[0].Thumbnails[2].PhotoUri"/></a>
+			<a href="#!/p/gallery_1/0"> <img ngc-lazy-image="homeImages[0].Large.PhotoUri"/></a>
 		</div>
 	</div>
 </div>
