--- a/Templates/template.home.html
+++ b/Templates/template.home.html
@@ -7,12 +7,11 @@
 		height: 240px;;
 	}
 	.home_main {
+		padding-right: 10px;
 	}
 
 	.homeimage {
-		height: 230px;;
-		width: 230px;;
-		border: 1px solid gray;
+		padding-right: 10px;
 	}
 	.lastline {
 		position: relative;
@@ -21,13 +20,13 @@
 
 	.home_main_image {
 		height: 720px;;
-		width: 470px;;
-		border: 1px solid gray;
 		overflow: hidden;
+	}
+	.home_main_image img {
+		max-width: inherit;
 	}
 
 	.home_main_image img{
-		max-width: auto;
 	}
 	.right {
 		border-right: 15px solid black;
