--- a/Templates/template.home.html
+++ b/Templates/template.home.html
@@ -56,7 +56,7 @@
 	}
 
 </style>
-<div style="margin-top: 10px;">
+<div style="margin-top: 10px;" class="container_12 right" >
 	<div class="grid_6">
 		<div class="home_main">
 			<div class="home_main_image">
