--- a/Css/masparti-responsive.css
+++ b/Css/masparti-responsive.css
@@ -1,41 +1,50 @@
 @media (min-width: 1200px) {
-    body {
-        font-size: 100%;
-    }
-
-    .container_12, .container {
-        max-width: 960px;
-        margin-left: auto;
-        margin-right: auto;
-    }
+  body {
+    font-size: 100%;
+  }
+  .container_12,
+  .container {
+    max-width: 960px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .icon-4x-responsive {
+    font-size: 8em;
+  }
 }
-
 @media (min-width: 768px) and (max-width: 1199px) {
-    body {
-        font-size: 80%;
-    }
-
-    .container_12, .container {
-        border: 1px solid green;
-    }
+  body {
+    font-size: 80%;
+  }
+  .container_12,
+  .container {
+    border: 1px solid green;
+  }
+  .icon-4x-responsive {
+    font-size: 6.4em;
+  }
 }
-
 @media (max-width: 767px) {
-    body {
-        font-size: 70%;
-    }
-
-    .container_12, .container {
-        border: 1px solid blue;
-    }
+  body {
+    font-size: 70%;
+  }
+  .container_12,
+  .container {
+    border: 1px solid blue;
+  }
+  .icon-4x-responsive {
+    font-size: 5.6em;
+  }
 }
 @media (max-width: 480px) {
-    body {
-        font-size: 60%;
-    }
-
-    .container_12, .container {
-        border: 1px solid yellow;
-    }
-
+  body {
+    font-size: 60%;
+  }
+  .container_12,
+  .container {
+    border: 1px solid yellow;
+  }
+  .icon-4x-responsive {
+    font-size: 4.8em;
+  }
 }
