--- a/Templates/template.p.html
+++ b/Templates/template.p.html
@@ -1,31 +1,51 @@
 <style>
 	.navigation {
-		margin-left: 20px;
 		position: fixed;
 		z-index: 10;
 		width: 100%;
+		background-color: yellowgreen;
+		opacity: 0.8;
 	}
+
 	.navigation li {
 		margin: 0;
 		padding: 0;
 	}
-	.icon-15x {
-		font-size: 15em;
+
+	.navigation ul, ul.navigation {
+		margin: 0;
+		padding: 0;
 	}
 </style>
+<div class="navigation">
+	<div class="container_12">
+		<div class="grid_1">
+			<button ng-click="prev()"  class="btn" ng-disabled="isFirst">
+				<i class="icon-angle-left icon-4x-responsive"></i>
+			</button>
+		</div>
 
-<!--<div class="btn-group">-->
-	<!--<a class="btn" href="#/home">home</a>-->
-<!--</div>-->
+		<div class="grid_10">ss</div>
 
-
-<ul class="navigation">
-	<li><button ng-click="prev()" class="btn"><i class="icon-angle-left icon-15x"></i> </button></li>
-	<li><button ng-click="next()" class="btn"><i class="icon-angle-right icon-15x"></i></button></li>
-</ul>
+		<div class="grid_1">
+			<div style="padding-right: 10px">
+				<button style="float:right" ng-click="next()" ng-disabled="isLast" class="btn">
+					<i class="icon-angle-right icon-4x-responsive"></i>
+				</button>
+			</div>
+		</div>
+	</div>
+</div>
 <div class="clear"></div>
 
-<div gridelement="currentGridElement"></div>
+<div class="container_12">
 
+	<!--<div class="btn-group">-->
+	<!--<a class="btn" href="#/home">home</a>-->
+	<!--</div>-->
+
+
+	<div gridelement="currentGridElement"></div>
+</div>
 
 
