--- a/Css/main.css
+++ b/Css/main.css
@@ -1,4 +1,199 @@
+body {
+  margin: 0;
+  padding: 0;
+}
+body {
+  font-family: 'source_sans_prolight', sans-serif;
+  font-weight: 400;
+}
+h1,
+h2,
+h3 {
+  font-weight: 400;
+}
+img {
+  max-width: 100%;
+}
 .middle-container {
   width: 960px;
   margin: 5% auto;
+}
+.navigation h1 {
+  margin: 0;
+  padding: 0;
+}
+.navigation .btn-link:disabled {
+  color: #eeeeee;
+  cursor: auto;
+}
+.navigation .btn-link:hover {
+  text-decoration: none;
+}
+.navigation.scrolled {
+  opacity: 1;
+  padding-top: .5em;
+  padding-bottom: .5em;
+}
+.navigation.scrolled .font-4x-responsive,
+.navigation.scrolled .icon-4x-responsive {
+  font-size: 2em;
+}
+.navigation.scrolled h3 {
+  display: none;
+}
+.navigation.scrolled h1 {
+  margin: 0;
+  padding: 0;
+}
+.pseudo-aspect-ratio-box {
+  position: relative;
+  content: "";
+  display: block;
+}
+.pseudo-aspect-ratio-content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+.ratio1_1 {
+  padding-top: 100%;
+}
+.ratio2_1 {
+  padding-top: 50%;
+}
+.ratio1_2 {
+  padding-top: 200%;
+}
+.ratio4_3 {
+  padding-top: 75%;
+}
+.ratio16_9 {
+  padding-top: 56.25%;
+}
+.image-placeholder {
+  background-color: #eeeeee;
+  width: 100%;
+  height: 100%;
+}
+.btn-link,
+.btn-link:active,
+.btn-link[disabled] {
+  background-color: transparent;
+  background-image: none;
+}
+.btn-link {
+  border-color: transparent;
+  cursor: pointer;
+  color: #9acd32;
+}
+.btn-link:hover {
+  color: #6c9023;
+  text-decoration: underline;
+  background-color: transparent;
+}
+.btn-link[disabled]:hover {
+  text-decoration: none;
+}
+.page-home {
+  margin-top: 10px;
+}
+.page-home.right {
+  border-right: 15px solid black;
+}
+.page-home .handwritten {
+  font-family: 'Advent Pro', sans-serif;
+}
+.page-home .home {
+  position: relative;
+  content: "";
+  display: block;
+  padding-top: 100%;
+}
+.page-home .home-jara {
+  position: relative;
+  content: "";
+  display: block;
+  padding-top: 50%;
+}
+.page-home .home_main {
+  padding-right: 10px;
+}
+.page-home .homeimage {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  padding-right: 10px;
+  padding-bottom: 10px;
+}
+.page-home .home_main_image {
+  height: 720px;
+  overflow: hidden;
+}
+.page-home .home_main_image img {
+  max-width: inherit;
+}
+.page-home .lastline {
+  top: 10px;
+}
+.page-home .jara {
+  margin-right: 10px;
+  text-align: right;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+.page-home .jara h1 {
+  font-size: 4em;
+  margin-bottom: 0px;
+  margin-top: 0px;
+  font-weight: 100;
+}
+.page-home .jara h3 {
+  font-weight: 100;
+  margin-top: 0px;
+}
+.page-home .grid_6 {
+  background-color: none;
+}
+.gdata-album-list .image-small {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  padding-top: 10px;
+  padding-left: 0;
+  padding-right: 10px;
+}
+.gdata-album-list .grid_3:before {
+  position: relative;
+  content: "";
+  display: block;
+  padding-top: 100%;
+}
+.gdata-album-list .first-image-box {
+  overflow: hidden;
+}
+.gdata-album-list .first-image-box:before {
+  position: relative;
+  content: "";
+  display: block;
+  padding-top: 56.25%;
+}
+.gdata-album-list .first-image-content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  padding-right: 10px;
+}
+.gdata-album-list .image-small.last {
+  padding-right: 0px;
 }
