--- a/Css/masparti-responsive.css
+++ b/Css/masparti-responsive.css
@@ -9,7 +9,10 @@
     margin-right: auto;
   }
   .icon-4x-responsive {
-    font-size: 8em;
+    font-size: 4em;
+  }
+  .font-4x-responsive {
+    font-size: 4em;
   }
 }
 @media (min-width: 768px) and (max-width: 1199px) {
@@ -21,7 +24,10 @@
     border: 1px solid green;
   }
   .icon-4x-responsive {
-    font-size: 6.4em;
+    font-size: 3.2em;
+  }
+  .font-4x-responsive {
+    font-size: 3.2em;
   }
 }
 @media (max-width: 767px) {
@@ -33,7 +39,10 @@
     border: 1px solid blue;
   }
   .icon-4x-responsive {
-    font-size: 5.6em;
+    font-size: 2.8em;
+  }
+  .font-4x-responsive {
+    font-size: 2.8em;
   }
 }
 @media (max-width: 480px) {
@@ -45,6 +54,9 @@
     border: 1px solid yellow;
   }
   .icon-4x-responsive {
-    font-size: 4.8em;
+    font-size: 2.4em;
+  }
+  .font-4x-responsive {
+    font-size: 2.4em;
   }
 }
