--- a/Css/masparti-responsive.less
+++ b/Css/masparti-responsive.less
@@ -1,49 +1,81 @@
-@icon4xSize: 8em;
-
+@icon4xSize: 4em;
+@font4xSize: 4em;
 
 @media (min-width: 1200px) {
-  body {
-    font-size: 100%;
-  }
+    body {
+        font-size: 100%;
+    }
 
-  .container_12, .container {
-    max-width: 960px;
-    margin-left: auto;
-    margin-right: auto;
-  }
+    .container_12, .container {
+        max-width: 960px;
+        margin-left: auto;
+        margin-right: auto;
+    }
 
-  .icon-4x-responsive {  font-size: @icon4xSize;   }
+    .icon-4x-responsive {
+        font-size: @icon4xSize;
+    }
+
+    .font-4x-responsive {
+        font-size: @font4xSize;
+    }
 }
 
 @media (min-width: 768px) and (max-width: 1199px) {
 
-  body {
-    font-size: 80%;
-  }
+    body {
+        font-size: 80%;
+    }
 
-  .container_12, .container {
-    border: 1px solid green;
-  }
-  .icon-4x-responsive {  font-size: @icon4xSize * 0.8;   }
+    h3 {
+    }
+
+    .container_12, .container {
+        border: 1px solid green;
+    }
+
+    .icon-4x-responsive {
+        font-size: @icon4xSize * 0.8;
+    }
+
+    .font-4x-responsive {
+        font-size: @font4xSize * 0.8;
+    }
 }
 
 @media (max-width: 767px) {
-  body {
-    font-size: 70%;
-  }
-  .container_12, .container {
-    border: 1px solid blue;
-  }
-  .icon-4x-responsive {  font-size: @icon4xSize * 0.7;   }
-}
-@media (max-width: 480px) {
-  body {
-    font-size: 60%;
-  }
+    body {
+        font-size: 70%;
+    }
 
-  .container_12, .container {
-    border: 1px solid yellow;
-  }
-  .icon-4x-responsive {  font-size: @icon4xSize *0.6;   }
+    .container_12, .container {
+        border: 1px solid blue;
+    }
+
+    .icon-4x-responsive {
+        font-size: @icon4xSize * 0.7;
+    }
+
+    .font-4x-responsive {
+        font-size: @font4xSize * 0.7;
+    }
+}
+
+@media (max-width: 480px) {
+    body {
+        font-size: 60%;
+    }
+
+    .container_12, .container {
+        border: 1px solid yellow;
+    }
+
+    .icon-4x-responsive {
+        font-size: @icon4xSize * 0.6;
+    }
+
+    .font-4x-responsive {
+        font-size: @font4xSize * 0.6;
+    }
 
 }
