--- a/Templates/template.gridelements.html
+++ b/Templates/template.gridelements.html
@@ -117,7 +117,7 @@
 	}
 </style>
 
-<script id="gdataalbum.thtml" type="text/ng-template"><div>
+<script id="gdataalbum.thtml" type="text/ng-template" onload="console.log('sdsd')"><div>
 	<div class="gdata-album-list" ng-controller="gridelementGdataAlbumCtrl">
 			<div class="first-image-box grid_12 btn-link" ng-click="showImage(gdataAlbumId, 0)" ng-show="firstPhoto">
 				<div  class="first-image-content">
