--- a/Templates/template.home.html
+++ b/Templates/template.home.html
@@ -2,7 +2,9 @@
 	<div class="grid_6">
 		<div class="home_main">
 			<div class="home_main_image">
-				<a href="#!/p/{{pageLink}}/0"><img ngc-lazy-image="homeImages[0].Large.PhotoUri"/></a>
+				<div class="image-placeholder">
+					<a href="#!/p/{{pageLink}}/0"><img ngc-lazy-image="homeImages[0].Large.PhotoUri"/></a>
+				</div>
 			</div>
 		</div>
 	</div>
