--- a/Templates/template.home.html
+++ b/Templates/template.home.html
@@ -3,7 +3,7 @@
 		<div class="home_main">
 			<div class="home_main_image">
 				<div class="image-placeholder">
-					<a href="#!/p/{{pageLink}}/0"><img ngc-lazy-image="homeImages[0].Large.PhotoUri"/></a>
+					<a href="#!/p/{{pageLink}}/0"><img ngc-lazy-image="homeImages[0].Thumbnails[2].PhotoUri"/></a>
 				</div>
 			</div>
 		</div>
@@ -30,7 +30,7 @@
 		<div class="grid_12">
 			<div class="home-jara ">
 				<div class="jara">
-					<h1 class="handwritten">jára tomka </h1>
+					<h1 class="handwritten"><span>sdsd sdsdsadas sd as a</span></h1>
 
 					<h3 class="handwritten">umělecký řezbář </h3></div>
 			</div>
