--- a/Templates/template.p.html
+++ b/Templates/template.p.html
@@ -11,7 +11,7 @@
 				<h1 class="font-4x-responsive">{{currentGridElement.Resources.header.Value}}</h1>
 
 				<!--<h1 class="font-4x-responsive">{{currentGridElement.Resources.header.Value}}</h1>-->
-				<h3>{{currentGridElement.Resources.text.Value }}</h3>
+				<h2>{{currentGridElement.Resources.text.Value }}</h2>
 				<!--&nbsp; -->
 			</div>
 
@@ -37,9 +37,12 @@
 
 		<div class="grid_12">
 			<div class="footer">
-				<span class="divider"></span>
-				<a href="#!/home">home</a>
-				<span class="divider"></span>
+				<div class="logo">
+					<a href="#!/home">
+						<h2>jára tomka</h2>
+						<h5> umělecký řezbář</h5>
+					</a>
+				</div>
 				tel. +420 737 016 101
 				<span class="divider"></span>
 				http://www.facebook.com/JaromirTomka
