--- a/Css/main.less
+++ b/Css/main.less
@@ -99,7 +99,7 @@ img {
 
 .image-placeholder {
 	overflow: hidden;
-	background-color: #eeeeee;
+	background-color: black;
 	width: 100%;
 	height: 100%;
 }
@@ -138,11 +138,7 @@ img {
 	}
 
 	.handwritten {
-		-webkit-transition: 1s linear all; /* Safari/Chrome */
-		-moz-transition: 1s linear all; /* Firefox */
-		-ms-transition: 1s linear all; /* IE10 */
-		-o-transition: 1s linear all; /* Opera */
-		transition: 1s linear all; /* Future Browsers */
+		top: -150px;
 		overflow: hidden;
 	}
 
@@ -172,7 +168,18 @@ img {
 		.pseudo-aspect-ratio-content;
 		padding-right: 10px;
 		padding-bottom: 10px;
+		opacity:1;
 	}
+
+	.homeimage img  {
+		.animate(200ms);
+	}
+
+	.homeimage img:hover {
+		opacity: 0.5;
+		-webkit-transform: scale(1.3);
+	}
+
 
 	.home_main_image {
 		.pseudo-aspect-ratio-content;
@@ -289,23 +296,26 @@ img {
 		margin: 0;
 		padding: 0;
 	}
-
 }
 
-.example-show-setup, .example-hide-setup {
-	-webkit-transition:all linear 0.5s;
-	-moz-transition:all linear 0.5s;
-	-ms-transition:all linear 0.5s;
-	-o-transition:all linear 0.5s;
-	transition:all linear 0.5s;
+.animate(@duration) {
+	-webkit-transition:all linear @duration;
+	-moz-transition:all linear @duration;
+	-ms-transition:all linear @duration;
+	-o-transition:all linear @duration;
+	transition:all linear @duration;
 }
 
-.example-show-setup {
+.example-show, .example-hide {
+	.animate(500ms);
+}
+
+.example-show {
 	line-height:0;
 	opacity:0;
 	padding:0 10px;
 }
-.example-show-start.example-show-start {
+.example-show-active.example-show-active {
 	line-height:20px;
 	opacity:1;
 	padding:10px;
@@ -313,14 +323,14 @@ img {
 	background:white;
 }
 
-.example-hide-setup {
+.example-hide {
 	line-height:20px;
 	opacity:1;
 	padding:10px;
 	border:1px solid black;
 	background:white;
 }
-.example-hide-start.example-hide-start {
+.example-hide-active.example-hide-active {
 	line-height:0;
 	opacity:0;
 	padding:0 10px;
